Try to fix flexbox wrapping issue in Safari

--- a/app/assets/stylesheets/organisms/_plans.scss
+++ b/app/assets/stylesheets/organisms/_plans.scss
@@ -4,6 +4,6 @@
   justify-content: center;
 
   .plan {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
   }
 }
